<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="welcome_message">Selamat Datang</string>
    <string name="email_input">Masukkan Email</string>
    <string name="password_input">Masukkan Password</string>
    <string name="login_button">Login</string>
    <string name="register">Daftar"</string>
    <string-array name="daftar_kota">
        <item>Yogyakarta</item>
        <item>Jakarta</item>
        <item>Surabaya</item>
        <item>Bandung</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>